--- a/Freelancer-s-Web/Pages/ApplicationPages/ApplicationList.cshtml
+++ b/Freelancer-s-Web/Pages/ApplicationPages/ApplicationList.cshtml
@@ -43,10 +43,10 @@
                 </form>*@
             </td>
             <td>
+                <a asp-area="" asp-page="/Profile/Index" asp-page-handler="Detail" asp-route-id="@item.User.Id">Candidate's Profile</a> 
                 @{
-                    if(item.Status == CommonEnums.APPLICATION_FORM_STATUS.PENDING)
+                    if(item.Status == CommonEnums.APPLICATION_FORM_STATUS.PENDING && Model.Post.Status == CommonEnums.POST_STATUS.PUBLIC)
                     {
-                        <a asp-area="" asp-page="/Profile/Index" asp-page-handler="Detail" asp-route-id="@item.User.Id">Candidate's Profile</a> 
                         <form method="post" asp-page-handler="Cancel" asp-route-id="@item.Id">
                             <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#confirm-cancel-@item.Id">Cancel</button>
                             <div class="modal" id="confirm-cancel-@item.Id" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -90,10 +90,54 @@
                         if(item.Status == CommonEnums.APPLICATION_FORM_STATUS.APPROVED) 
                         {
                             <p>Approved</p>
+                            if(Model.Post.Status == CommonEnums.POST_STATUS.PUBLIC)
+                            {
+                               <form method="post" asp-page-handler="Cancel" asp-route-id="@item.Id">
+                                <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#confirm-cancel-@item.Id">Cancel</button>
+                                <div class="modal" id="confirm-cancel-@item.Id" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h2 class="modal-title">Cancel</h2>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>Are you sure you want to cancel @item.User.Email?</p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="submit" class="btn btn-success">Yes, Confirm Cancel</button>
+                                                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                    </form>
+                            }
                         }
                         if(item.Status == CommonEnums.APPLICATION_FORM_STATUS.CANCELED) 
                         {
                             <p>Canceled</p>
+                            if (Model.Post.Status == CommonEnums.POST_STATUS.PUBLIC)
+                            {
+                              <form method="post" asp-page-handler="Approve" asp-route-id="@item.Id">
+                                <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#confirm-approve-@item.Id">Approve</button>
+                                <div class="modal" id="confirm-approve-@item.Id" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h2 class="modal-title">Approve</h2>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>Are you sure you want to approve @item.User.Email?</p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="submit" class="btn btn-success">Yes, Approve</button>
+                                                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                </form>      
+                            }
                         }
                         if(item.Status == CommonEnums.APPLICATION_FORM_STATUS.REMOVED) 
                         {
