--- a/Freelancer-s-Web/Pages/PostPage/Delete.cshtml
+++ b/Freelancer-s-Web/Pages/PostPage/Delete.cshtml
@@ -25,18 +25,6 @@
             @Html.DisplayFor(model => model.Post.Description)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Post.Min)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Post.Min)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Post.Max)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Post.Max)
-        </dd>
-        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Post.Status)
         </dt>
         <dd class="col-sm-10">
@@ -46,43 +34,13 @@
             @Html.DisplayNameFor(model => model.Post.Major)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Post.Major.CreatedBy)
+            @Html.DisplayFor(model => model.Post.Major.Name)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Post.User)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Post.User.Avatar)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Post.CreatedAt)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Post.CreatedAt)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Post.UpdatedAt)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Post.UpdatedAt)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Post.IsDeleted)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Post.IsDeleted)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Post.CreatedBy)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Post.CreatedBy)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Post.UpdatedBy)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Post.UpdatedBy)
+            @Html.DisplayFor(model => model.Post.User.Email)
         </dd>
     </dl>
     
